lower zoom scale on hover to avoid images overlapping text

--- a/src/styles/blocks/explore.scss
+++ b/src/styles/blocks/explore.scss
@@ -25,7 +25,7 @@
       transition: transform 0.2s ease-in-out;
 
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
       }
 
       @media (min-width: $medium-width) {
